.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
..F....... [ZBX-5711] added caching for frontend favorite values (Toms)
..F....... [ZBX-5711] removed redundant queries when editing web scenario (Toms)
A.F....... [ZBX-5565] fixed html is returned on api requests if db is down (Vedmak)
..F....... [ZBX-3396] added error message if FreeType support is missing (Toms)
...G...... [ZBX-4355] fixed response on check inodes on file systems not supporting them (Sasha)
..F....... [ZBX-5673] fixed incorrect Y-scale if point value > 10 PB (Oleg)
..F....... [ZBX-875] fixed duplicate Y-scale (Oleg)
..F....... [ZBX-3934] unified color codes validation in frontend (Vedmak)
A......... [ZBX-3684] fixed template.get method returns excessive 'hostid' field (Vedmak)
A......... [ZBX-5498] improved performance of template linkage operations in API (Vedmak)
A......... [ZBX-5498] applications api refactoring (Vedmak)
..F....... [ZBX-5560] fixed recovery sound saved incorrectly in user profile (Vedmak)
..F....... [ZBX-2770] added autofocus for first fields in frontend forms (Vedmak)
..F....... [ZBX-5463] fixed inability to login if http auth is enabled and frontend access is set to internal (Vedmak)
...G...PS. [ZBX-5383] maximum data size accepted via Zabbix communication protocol is limited to 64 MB (Andris)
..F....... [ZBX-5167] fixed incorrect screen count on the templated screen configuration page (Vedmak)
..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)