@@ -17,6 +17,7 @@ A.F.I...S. [ZBXNEXT-1186] increased length to 2048 characters of expression fiel
 ..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
 
 Bug fixes:
+A......... [ZBX-5709] fixed trigger recreation after template trigger expression change causing event history deletion (Toms)
 ..F....... [ZBX-5711] added caching for frontend favorite values (Toms)
 ..F....... [ZBX-5711] removed redundant queries when editing web scenario (Toms)
 A.F....... [ZBX-5565] fixed html is returned on api requests if db is down (Vedmak)
